--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,10 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+<ion-content padding>
+  <div text-center>
+  <ion-button color="warning" class="round" size="large" (click)="notification">
+    Fragen oder helfen?</ion-button>
+
+  </div>
+  <div text-center><b>Drunken Sie die Taste und wie kommen bald! :)</b>
   </div>
 </ion-content>
