--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,9 @@
-
+.round{
+  --width: 500px;
+  --height: 300px;
+  --vertical-align: middle;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  align-items: center;
+  text-align: center;
+};
